finished table set-up

--- a/index.html
+++ b/index.html
@@ -53,5 +53,19 @@
         <button type="submit">Submit Information</button>
         <!-- end form -->
     </form>
+
+    <secion id="table">
+        <table id="salary-table">
+            <tr id="title-row">EMPLOYEE INFO</tr>
+            <tr id="top-row">
+                <td class="form-key">First Name</td>
+                <td class="form-key">Last Name</td>
+                <td class="form-key">ID number</td>
+                <td class="form-key">Job Title</td>
+                <td class="form-key">Salary</td>
+            </tr>
+        </table>
+
+    </secion>
 </body>
 </html>
