finished state update function

--- a/index.html
+++ b/index.html
@@ -15,39 +15,39 @@
     <!-- form for inputs -->
     <form id="salary-form">
         <!-- first name input -->
-        <div id="first-name-input" class="form-section">
-            <label for="first-name">
+        <div id="first-name" class="form-section">
+            <label for="first-name-input">
                 First Name: 
             </label>
-            <input id="first-name" type="text"/>
+            <input id="first-name-input" type="text"/>
         </div>  
         <!-- last name input -->
-        <div id="last-name-input" class="form-section">
-            <label for="last-name">
+        <div id="last-name" class="form-section">
+            <label for="last-name-input">
                 last-name Name: 
             </label>
-            <input id="last-name" type="text"/>
+            <input id="last-name-input" type="text"/>
         </div> 
         <!-- id number input -->
-        <div id="id-input" class="form-section">
-            <label for="id">
+        <div id="id" class="form-section">
+            <label for="id-input">
                 Employee ID number:
             </label>
-            <input id="id" type="number"/>
+            <input id="id-input" type="number"/>
         </div>  
         <!-- job title input -->
-        <div id="job-input" class="form-section">
-            <label for="job-title">
+        <div id="job-title" class="form-section">
+            <label for="job-title-input">
                 Job Title: 
             </label>
-            <input id="job-title" type="text"/>
+            <input id="job-title-input" type="text"/>
         </div>  
         <!-- annual salary input -->
-        <div id="salary-input" class="form-section">
-            <label for="salary">
+        <div id="salary" class="form-section">
+            <label for="salary-input">
                 Annual Salary: 
             </label>
-            <input id="salary" type="number"/>
+            <input id="salary-input" type="number"/>
         </div>  
         <!-- submit button input -->
         <button type="submit">Submit Information</button>
@@ -64,8 +64,11 @@
                 <td class="form-key">Job Title</td>
                 <td class="form-key">Salary</td>
             </tr>
-        </table>
+            <div id="inputs">
 
+            </div>
+        </table>
     </secion>
+    <h2 id="monthly-cost">Total Monthly Costs: $0</h2>
 </body>
 </html>
