finished table appending

--- a/index.html
+++ b/index.html
@@ -54,21 +54,17 @@
         <!-- end form -->
     </form>
 
-    <secion id="table">
         <table id="salary-table">
-            <tr id="title-row">EMPLOYEE INFO</tr>
-            <tr id="top-row">
-                <td class="form-key">First Name</td>
-                <td class="form-key">Last Name</td>
-                <td class="form-key">ID number</td>
-                <td class="form-key">Job Title</td>
-                <td class="form-key">Salary</td>
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>ID Number</th>
+                <th>Job Title</th>
+                <th>Salary</th> 
             </tr>
-            <div id="inputs">
-
-            </div>
         </table>
     </secion>
+    
     <h2 id="monthly-cost">Total Monthly Costs: $0</h2>
 </body>
 </html>
