done with base mode

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
         </div>
         <!-- end form -->
     </form>
-        <section id="table">
-      
+    <section id="table">
+
     </section>
     <div class="final-cost">
-        <h2>Total Monthly Costs:<span id="total-cost">$0</span></h2>
+        <h2><span>Total Monthly Costs:</span><span id="total-cost">$0</span></h2>
     </div>
 </body>
 </html>
