finished assignment and edited css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- last name input -->
         <div id="last-name" class="form-section">
             <label for="last-name-input">
-                last-name Name: 
+                Last Name: 
             </label>
             <input id="last-name-input" type="text"/>
         </div> 
